# cDBParser

./: 0_build_run.sh  2_run.sh  3_build_test.sh  CMakeLists.txt
include/: nodes.h  parser.h  parser_utils.h  tokenizer.h  tokens.h
notes/: sql_bnf.md  todo.md
src/: main.cpp  parser.cpp  tokenizer.cpp
src/parser/: nodes.cpp  parser.cpp  parser_utils.cpp
src/tokenizer/: tokenizer.cpp  tokens.cpp
tests/: CMakeLists.txt  parser_test.cpp  tokenizer_test.cpp
tests/cases/: 1_0.sql  1_1.sql  1_2.sql  1_3.sql  1_4.sql  1_5.sql  1_6.sql
